pushed initial SEGA TPC list

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -96,6 +96,17 @@ title: SEGA Workshop 2025
           </div>
           <hr class="w-100" />
           <div class="d-flex gap-1 flex-column w-100">
+            <h5 class="fs-6 fw-bold">Social Media Chair</h5>
+            <div class="d-flex flex-column">
+              <h5 class="fs-6">
+                Gagan Jhajj<br />
+                Athabasca University, Canada<br />
+                <a href="mailto:gjhajj1@learn.athabascau.ca">gjhajj1@learn.athabascau.ca</a>
+              </h5>
+            </div>
+          </div>
+          <hr class="w-100" />
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">
               Advisory Committee (in alphabetical order of last names)
             </h5>
@@ -133,9 +144,31 @@ title: SEGA Workshop 2025
           </div>
           <hr class="w-100" />
           <div class="d-flex gap-1 flex-column w-100">
-            <h5 class="fs-6 fw-bold">Technical Program Committee</h5>
+            <h5 class="fs-6 fw-bold">Technical Program Committee (in alphabetical order of last names)</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">TBD</h5>
+              <h5 class="fs-6">Jamal Alsakran<br />Fairleigh Dickinson University, Canada<br /></h5>
+              <h5 class="fs-6">Jason Bernard<br />Athabasca University, Canada<br /></h5>
+              <h5 class="fs-6">Thomas Chiu<br />The Chinese University of Hong Kong, Hong Kong<br /></h5>
+              <h5 class="fs-6">Douglas Clark<br />University of Calgary<br /></h5>
+              <h5 class="fs-6">Wenyun Dai <br />Fairleigh Dickinson University, Canada<br /></h5>
+              <h5 class="fs-6">Ali Dewan<br />Athabasca University, Canada<br /></h5>
+              <h5 class="fs-6">Sarah Eaton<br />University of Calgary<br /></h5>
+              <h5 class="fs-6">Stella George<br />Athabasca University, Canada<br /></h5>
+              <h5 class="fs-6">Dongkun Han<br />The Chinese University of Hong Kong, Hong Kong<br /></h5>
+              <h5 class="fs-6">Bob Heller<br />Athabasca University, Canada<br /></h5>
+              <h5 class="fs-6">Leon Lei<br />City University of Hong Kong, Canada<br /></h5>
+              <h5 class="fs-6">Xing Liu<br />Kwantlen Polytechnic University, Canada<br /></h5>
+              <h5 class="fs-6">Lukas Liu<br />The University of Hong Kong, Hong Kong<br /></h5>
+              <h5 class="fs-6">Yaoqing Liu <br />Fairleigh Dickinson University, Canada<br /></h5>
+              <h5 class="fs-6">Zhiwei Mao <br />Fairleigh Dickinson University, Canada<br /></h5>
+              <h5 class="fs-6">Zahia Marzouk<br />Kwantlen Polytechnic University, Canada<br /></h5>
+              <h5 class="fs-6">Salma Noor<br />Fairleigh Dickinson University, Canada<br /></h5>
+              <h5 class="fs-6">Fred Popowich<br />Simon Fraser University, Canada<br /></h5>
+              <h5 class="fs-6">Frank Rudzicz<br />Dalhousie University, Canada<br /></h5>
+              <h5 class="fs-6">Angela Siegel<br />Dalhousie University, Canada<br /></h5>
+              <h5 class="fs-6">Avimanyou Vatsa <br />Fairleigh Dickinson University, Canada<br /></h5>
+              <h5 class="fs-6">Johan Woodworth<br />Mount Saint Vincent University, Canada<br /></h5>
+              <h5 class="fs-6">Xiaokun Zhang<br />Athabasca University, Canada<br /></h5>
             </div>
           </div>
         </div>
