SEGA updated CFP contributions

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -212,22 +212,27 @@ title: SEGA Workshop 2025
               <h5 class="fs-5">The workshop invites contributions on:</h5>
               <ul>
                 <li>
-                  Novel AI/ML/RL algorithms and other computational methods for
-                  educational content generation and adaptation
+                  Novel AI/RL/ML algorithms for education
                 </li>
                 <li>
-                  Empirical studies on AI/ML’s impact on learning outcomes,
-                  self-regulation, student engagement, and instructor workloads
+                  Empirical studies on AI's impact on learning effectiveness
                 </li>
                 <li>
-                  Frameworks for evaluating AI- and/or ML-generated content
-                  validity, accessibility, and inclusivity
+                  Theoretical and conceptual frameworks that inform the design, integration, or critique of AI in 
+                  education
                 </li>
                 <li>
-                  Ethical guidelines, participatory design, and policy
-                  frameworks for responsible AI/ML integration in education
+                  Evaluation frameworks for AI-generated content
+                </li>
+                <li>
+                  Institutional ethical guidelines and policy recommendations
                 </li>
               </ul>
+              <h5 class="fs-5">This workshop aims to catalyze actionable insights for creating AI systems that 
+                augment human expertise while prioritizing pedagogical integrity. We welcome both empirical 
+                research and theoretical explorations that advance critical, ethical, and pedagogically 
+                grounded understandings of AI in educational contexts.
+              </h5>
             </div>
           </div>
         </div>
