SEGA TPC UCalgary country update.

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -149,10 +149,10 @@ title: SEGA Workshop 2025
               <h5 class="fs-6">Jamal Alsakran<br />Fairleigh Dickinson University, Canada<br /></h5>
               <h5 class="fs-6">Jason Bernard<br />Athabasca University, Canada<br /></h5>
               <h5 class="fs-6">Thomas Chiu<br />The Chinese University of Hong Kong, Hong Kong<br /></h5>
-              <h5 class="fs-6">Douglas Clark<br />University of Calgary<br /></h5>
+              <h5 class="fs-6">Douglas Clark<br />University of Calgary, Canada<br /></h5>
               <h5 class="fs-6">Wenyun Dai <br />Fairleigh Dickinson University, Canada<br /></h5>
               <h5 class="fs-6">Ali Dewan<br />Athabasca University, Canada<br /></h5>
-              <h5 class="fs-6">Sarah Eaton<br />University of Calgary<br /></h5>
+              <h5 class="fs-6">Sarah Eaton<br />University of Calgary, Canada<br /></h5>
               <h5 class="fs-6">Stella George<br />Athabasca University, Canada<br /></h5>
               <h5 class="fs-6">Dongkun Han<br />The Chinese University of Hong Kong, Hong Kong<br /></h5>
               <h5 class="fs-6">Bob Heller<br />Athabasca University, Canada<br /></h5>
