SEGA FDU Country update

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -150,7 +150,7 @@ title: SEGA Workshop 2025
               <h5 class="fs-6">Jason Bernard<br />Athabasca University, Canada<br /></h5>
               <h5 class="fs-6">Thomas Chiu<br />The Chinese University of Hong Kong, Hong Kong<br /></h5>
               <h5 class="fs-6">Douglas Clark<br />University of Calgary, Canada<br /></h5>
-              <h5 class="fs-6">Wenyun Dai <br />Fairleigh Dickinson University, Canada<br /></h5>
+              <h5 class="fs-6">Wenyun Dai <br />Fairleigh Dickinson University, USA<br /></h5>
               <h5 class="fs-6">Ali Dewan<br />Athabasca University, Canada<br /></h5>
               <h5 class="fs-6">Sarah Eaton<br />University of Calgary, Canada<br /></h5>
               <h5 class="fs-6">Stella George<br />Athabasca University, Canada<br /></h5>
@@ -159,14 +159,14 @@ title: SEGA Workshop 2025
               <h5 class="fs-6">Leon Lei<br />City University of Hong Kong, Canada<br /></h5>
               <h5 class="fs-6">Xing Liu<br />Kwantlen Polytechnic University, Canada<br /></h5>
               <h5 class="fs-6">Lukas Liu<br />The University of Hong Kong, Hong Kong<br /></h5>
-              <h5 class="fs-6">Yaoqing Liu <br />Fairleigh Dickinson University, Canada<br /></h5>
-              <h5 class="fs-6">Zhiwei Mao <br />Fairleigh Dickinson University, Canada<br /></h5>
+              <h5 class="fs-6">Yaoqing Liu <br />Fairleigh Dickinson University, USA<br /></h5>
+              <h5 class="fs-6">Zhiwei Mao <br />Fairleigh Dickinson University, USA<br /></h5>
               <h5 class="fs-6">Zahia Marzouk<br />Kwantlen Polytechnic University, Canada<br /></h5>
               <h5 class="fs-6">Salma Noor<br />Fairleigh Dickinson University, Canada<br /></h5>
               <h5 class="fs-6">Fred Popowich<br />Simon Fraser University, Canada<br /></h5>
               <h5 class="fs-6">Frank Rudzicz<br />Dalhousie University, Canada<br /></h5>
               <h5 class="fs-6">Angela Siegel<br />Dalhousie University, Canada<br /></h5>
-              <h5 class="fs-6">Avimanyou Vatsa <br />Fairleigh Dickinson University, Canada<br /></h5>
+              <h5 class="fs-6">Avimanyou Vatsa <br />Fairleigh Dickinson University, USA<br /></h5>
               <h5 class="fs-6">Johan Woodworth<br />Mount Saint Vincent University, Canada<br /></h5>
               <h5 class="fs-6">Xiaokun Zhang<br />Athabasca University, Canada<br /></h5>
             </div>
