sega tpc qing tan added

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -166,6 +166,7 @@ title: SEGA Workshop 2025
               <h5 class="fs-6">Fred Popowich<br />Simon Fraser University, Canada<br /></h5>
               <h5 class="fs-6">Frank Rudzicz<br />Dalhousie University, Canada<br /></h5>
               <h5 class="fs-6">Angela Siegel<br />Dalhousie University, Canada<br /></h5>
+              <h5 class="fs-6">Qing Tan<br />Athabasca University, Canada<br /></h5>
               <h5 class="fs-6">Avimanyou Vatsa <br />Fairleigh Dickinson University, USA<br /></h5>
               <h5 class="fs-6">Johan Woodworth<br />Mount Saint Vincent University, Canada<br /></h5>
               <h5 class="fs-6">Xiaokun Zhang<br />Athabasca University, Canada<br /></h5>
