sega social media chair updated

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -101,6 +101,11 @@ title: SEGA Workshop 2025
               <h5 class="fs-6">
                 Gagan Jhajj<br />
                 Athabasca University, Canada<br />
+                <a href="mailto:hongxiny@athabascau.ca">hongxiny@athabascau.ca</a>
+              </h5>
+              <h5 class="fs-6">
+                Hongxin Yan<br />
+                Athabasca University, Canada<br />
                 <a href="mailto:gjhajj1@learn.athabascau.ca">gjhajj1@learn.athabascau.ca</a>
               </h5>
             </div>
