--- a/index.html
+++ b/index.html
@@ -309,6 +309,14 @@ title: Home
       <p>Local Chair</p>
     </div>
 
+<div class="col-md-4">
+      <img src="/assets/images/guojun.jpg" alt="abbas" class="circle-img mb-3" />
+      <h5>Guojun Tang</h5>
+      <h6><i>University of Calgary, Canada</i></h6>
+      <p>Local Chair</p>
+    </div>
+
+    
     <div class="row text-center justify-content-center g-4">
       <div class="row text-center">
         <div class="col-12">
