--- a/index.html
+++ b/index.html
@@ -218,6 +218,21 @@ title: Home
       <p>Publication Chair</p>
     </div>
 
+
+ <div class="col-md-4">
+      <img
+        src="/assets/images/x-feng.jpg"
+        alt="Dr. Carson Leung"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Xiaohua Feng</h5>
+      <h6><i>University of Bedfordshire, UK</i></h6>
+      <p>Diversity and Inclusion Chair</p>
+    </div>
+
+
+
+    
     <div class="col-md-4">
       <img src="/assets/images/saher.jpg" alt="Dr. " class="circle-img mb-3" />
       <h5>Dr. Saher Javaid</h5>
