--- a/wsw-forum/index.html
+++ b/wsw-forum/index.html
@@ -88,6 +88,7 @@ title: Women in the Smart World Forum 2025
                 Ying Zhang, Northwestern Polytechnical University, China
               </h5>
               <h5 class="fs-6">Binbin Zhou, Hangzhou City University, China</h5>
+              <h5 class="fs-6">Sara Saeedi, University of Calgary, Canada</h5>
             </div>
           </div>
           <hr class="w-100" />
@@ -95,13 +96,26 @@ title: Women in the Smart World Forum 2025
             <h5 class="fs-6 fw-bold">Executive Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">Khawla Alhasan, Open Arab University, Kuwait</h5>
-              <h5 class="fs-6">Ismini Psychoula, Ofcom, United Kingdom</h5>
               <h5 class="fs-6">
                 Rosy Xi Luo, Beijing Raygen Innovation Technology Co., Ltd,
                 China
               </h5>
               <h5 class="fs-6">
                 Joanna Siebert, Harbin Institute of Technology, Shenzhen, China
+              </h5>
+            </div>
+          </div>
+          <hr class="w-100" />
+          <div class="d-flex gap-1 flex-column">
+            <h5 class="fs-6 fw-bold">Executive Co-Chairs</h5>
+            <div class="d-flex flex-column">
+              <h5 class="fs-6">
+                Saher Javaid, Japan Advanced Institute of Science and
+                Technology, Japan
+              </h5>
+              <h5 class="fs-6">Tatiana Cardon, Saint Louis University, USA</h5>
+              <h5 class="fs-6">
+                Ismini Psychoula, University College London, United Kingdom
               </h5>
             </div>
           </div>
