SEGA updated PC and TPC

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -74,12 +74,17 @@ title: SEGA Workshop 2025
           </div>
           <hr class="w-100" />
           <div class="d-flex gap-1 flex-column w-100">
-            <h5 class="fs-6 fw-bold">Program Chair</h5>
+            <h5 class="fs-6 fw-bold">Program Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Marco Ho <br />
+                Marco Ho<br />
                 British Columbia Institute of Technology, Canada <br />
                 <a href="mailto:marco_ho@bcit.ca">marco_ho@bcit.ca</a>
+              </h5>
+              <h5 class="fs-6">
+                Francesco Pupo<br />
+                The University of Calabria, Italy<br />
+                <a href="mailto:francesco.pupo@unical.it">francesco.pupo@unical.it</a>
               </h5>
             </div>
           </div>
@@ -130,7 +135,7 @@ title: SEGA Workshop 2025
               </h5>
               <h5 class="fs-6">
                 Giancarlo Fortino <br />
-                The University of Calabria, Italy <br />
+                The University of Calabria, Italy<br />
                 <a href="mailto:giancarlo.fortino@unical.it"
                   >giancarlo.fortino@unical.it</a
                 >
@@ -159,6 +164,7 @@ title: SEGA Workshop 2025
               <h5 class="fs-6">Ali Dewan<br />Athabasca University, Canada<br /></h5>
               <h5 class="fs-6">Sarah Eaton<br />University of Calgary, Canada<br /></h5>
               <h5 class="fs-6">Glen Farrelly<br />Athabasca University, Canada<br /></h5>
+              <h5 class="fs-6">Sabine Graf<br />Athabasca University, Canada<br /></h5>
               <h5 class="fs-6">Stella George<br />Athabasca University, Canada<br /></h5>
               <h5 class="fs-6">Dongkun Han<br />The Chinese University of Hong Kong, Hong Kong<br /></h5>
               <h5 class="fs-6">Bob Heller<br />Athabasca University, Canada<br /></h5>
@@ -170,11 +176,14 @@ title: SEGA Workshop 2025
               <h5 class="fs-6">Zahia Marzouk<br />Kwantlen Polytechnic University, Canada<br /></h5>
               <h5 class="fs-6">Marina Milner-Bolotin<br />University of British Columbia, Canada<br /></h5>
               <h5 class="fs-6">Salma Noor<br />Fairleigh Dickinson University, Canada<br /></h5>
+              <h5 class="fs-6">Rita Orji<br />Dalhousie University, Canada<br /></h5>
               <h5 class="fs-6">Fred Popowich<br />Simon Fraser University, Canada<br /></h5>
               <h5 class="fs-6">Frank Rudzicz<br />Dalhousie University, Canada<br /></h5>
+              <h5 class="fs-6">Claudio Savaglio<br />The University of Calabria, Italy<br /></h5>
               <h5 class="fs-6">Angela Siegel<br />Dalhousie University, Canada<br /></h5>
               <h5 class="fs-6">Qing Tan<br />Athabasca University, Canada<br /></h5>
               <h5 class="fs-6">Avimanyou Vatsa <br />Fairleigh Dickinson University, USA<br /></h5>
+              <h5 class="fs-6">Nicholas Vincent <br />Simon Fraser University, Canada<br /></h5>
               <h5 class="fs-6">Johan Woodworth<br />Mount Saint Vincent University, Canada<br /></h5>
               <h5 class="fs-6">Xiaokun Zhang<br />Athabasca University, Canada<br /></h5>
             </div>
