SEGA Updated CFP to include TPC

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -164,6 +164,7 @@ title: SEGA Workshop 2025
               <h5 class="fs-6">Ali Dewan<br />Athabasca University, Canada<br /></h5>
               <h5 class="fs-6">Sarah Eaton<br />University of Calgary, Canada<br /></h5>
               <h5 class="fs-6">Glen Farrelly<br />Athabasca University, Canada<br /></h5>
+              <h5 class="fs-6">Maurizio Gabbrielli<br />University of Bologna, Italy<br /></h5>
               <h5 class="fs-6">Sabine Graf<br />Athabasca University, Canada<br /></h5>
               <h5 class="fs-6">Stella George<br />Athabasca University, Canada<br /></h5>
               <h5 class="fs-6">Dongkun Han<br />The Chinese University of Hong Kong, Hong Kong<br /></h5>
