--- a/scalcom/index.html
+++ b/scalcom/index.html
@@ -89,7 +89,7 @@ title: IEEE ScalCom 2025
                 Cen Chen, South China University of Technology, China
               </h5>
               <h5 class="fs-6">
-                Fang Jiang, University of Northern BC, Canada
+                Fan Jiang, University of Northern BC, Canada
               </h5>
             </div>
           </div>
