--- a/contact/index.html
+++ b/contact/index.html
@@ -35,7 +35,8 @@ title: Contact
       <ul class="fs-5 list-unstyled">
         <li class="mb-2">
           For questions about <strong>Local logistics</strong> including visa
-          application: Dr. Abbas Mahbod &lt;<a
+          application: Guojun Tang href="mailto:guojun.tang@ucalgary.ca"
+         or Abbas Mahbod &lt;<a
             href="mailto:abbas.mahbod1@ucalgary.ca"
             >abbas.mahbod1@ucalgary.ca</a
           >&gt;
@@ -48,7 +49,8 @@ title: Contact
         </li>
         <li class="mb-2">
           For questions about <strong>Paper EDAS submissions</strong>: Program
-          Chair(s) of each conference or workshop
+          Chair(s) of each conference or workshop. (see the web page of each conference or workshop for their email addresses)
+          
         </li>
         <li class="mb-2">
           For questions about <strong>Registrations</strong>: Dr. Steve Drew
@@ -59,7 +61,7 @@ title: Contact
           For questions about the <strong>Congress Program</strong>: Prof. Reza
           Malekian &lt;<a href="mailto:reza.malekian@ieee.org"
             >reza.malekian@ieee.org</a
-          >&gt;
+          >&gt; or Prof. Oscar Lin at oscarl@athabascau.ca
         </li>
         <li class="mb-2">
           For questions about <strong>Publication</strong>: Dr. Xueqin Liang
@@ -84,6 +86,15 @@ title: Contact
             >C.Ashiq.Rahman@calgary.ca</a
           >&gt;
         </li>
+
+        <li class="mb-2">
+          For general questions about <strong>The event </strong>: Prof. Henry Leung
+          &lt;<a href="mailto:leungh@calgary.ca"
+            >leungh@calgary.ca</a
+          >&gt;
+        </li>
+
+        
       </ul>
     </div>
   </div>
