--- a/scalcom/index.html
+++ b/scalcom/index.html
@@ -86,10 +86,12 @@ title: IEEE ScalCom 2025
             <h5 class="fs-6 fw-bold">Program Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Cen Chen, South China University of Technology, China
+                Cen Chen, South China University of Technology, China, email: 
+                chencen@scut.edu.cn
               </h5>
               <h5 class="fs-6">
-                Fan Jiang, University of Northern BC, Canada
+                Fan Jiang, University of Northern BC, Canada, email: Fan.Jiang@unbc.ca
+
               </h5>
             </div>
           </div>
