--- a/digitaltwin/index.html
+++ b/digitaltwin/index.html
@@ -99,7 +99,7 @@ title: IEEE Digital Twin 2025
           <div class="d-flex gap-1 flex-column">
             <h5 class="fs-6 fw-bold">Program Chairs</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Tao Zhu, University of South China, China</h5>
+              <h5 class="fs-6">Tao Zhu, University of South China, China , email: tzhu@usc.edu.cn</h5>
               <h5 class="fs-6">Jing Qin, Dalian University, China</h5>
               <h5 class="fs-6">
                 Nyo Thiri Aung, University College Dublin, Ireland
