--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -114,12 +114,12 @@ title: IEEE MVS 2025
           <div class="d-flex gap-1 flex-column">
             <h5 class="fs-6 fw-bold">Program Chairs</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Azza Basiouni, Liwa College, UAE</h5>
+              <h5 class="fs-6">Azza Basiouni, Liwa College, UAE, email: azza.basiouni@lc.ac.ae</h5>
               <h5 class="fs-6">
-                Junhui Hou, City University of Hong Kong, Hong Kong, China
+                Junhui Hou, City University of Hong Kong, Hong Kong, China, email: jh.hou@cityu.edu.hk
               </h5>
               <h5 class="fs-6">
-                Francesco Pupo, The University of Calabria, Italy
+                Francesco Pupo, The University of Calabria, Italy, email: francesco.pupo@unical.it
               </h5>
             </div>
           </div>
