--- a/uic/index.html
+++ b/uic/index.html
@@ -89,7 +89,7 @@ title: IEEE UIC 2025
               <h5 class="fs-6">
                 Ying Zhang, Northwestern Polytechnical University, China
               </h5>
-              <h5 class="fs-6">Xiaokang Wang, Hainan University, China</h5>
+              <h5 class="fs-6">Xiaokang Wang, Hainan University, China, email: xkwang@hainanu.edu.cn </h5>
             </div>
           </div>
           <hr class="w-100" />
