--- a/atc/index.html
+++ b/atc/index.html
@@ -103,7 +103,7 @@ title: IEEE UIC 2025
             <div class="d-flex flex-column">
               <h5 class="fs-6">Tarik Taleb, Ruhr University Bochum, Germany</h5>
               <h5 class="fs-6">
-                Zuowei Zhang, Northwestern Polytechnical University, China  (email: haozhu <zhuhao@cqupt.edu.cn>)
+                Zuowei Zhang, Northwestern Polytechnical University, China,  email: zhuhao@cqupt.edu.cn
 
               </h5>
             </div>
