--- a/contact/index.html
+++ b/contact/index.html
@@ -35,7 +35,8 @@ title: Contact
       <ul class="fs-5 list-unstyled">
         <li class="mb-2">
           For questions about <strong>Local logistics</strong> including visa
-          application: Guojun Tang href="mailto:guojun.tang@ucalgary.ca"
+          application: Guojun Tang &lt;<a href="mailto:guojun.tang@ucalgary.ca">guojun.tang@ucalgary.ca</a
+          >&gt;
          or Abbas Mahbod &lt;<a
             href="mailto:abbas.mahbod1@ucalgary.ca"
             >abbas.mahbod1@ucalgary.ca</a
