--- a/index.html
+++ b/index.html
@@ -41,8 +41,17 @@ title: Home
 <section
   class="page-section container-fluid px-5 pt-3 pb-5 mt-2 d-flex flex-column gap-3"
 >
-  <div class="alert alert-primary" role="alert">
-    Paper submission deadline has been extended to <b>May 1</b>
+  <div>
+    <div class="alert alert-primary" role="alert">
+      Paper submission deadline has been extended to <b>May 1</b>
+    </div>
+    <div class="alert alert-danger" role="alert">
+      Travel grants available for IEEE Computational Intelligence Society (CIS)
+      members.
+      <a href="/travel/ieee-travel-grants" class="alert-link"
+        >Learn more and apply</a
+      >.
+    </div>
   </div>
   <div class="row">
     <div class="col-sm-8 mb-3 mb-sm-0 d-flex flex-column gap-4">
@@ -218,8 +227,7 @@ title: Home
       <p>Publication Chair</p>
     </div>
 
-
- <div class="col-md-4">
+    <div class="col-md-4">
       <img
         src="/assets/images/x-feng.jpg"
         alt="Dr. Carson Leung"
@@ -230,9 +238,6 @@ title: Home
       <p>Diversity and Inclusion Chair</p>
     </div>
 
-
-
-    
     <div class="col-md-4">
       <img src="/assets/images/saher.jpg" alt="Dr. " class="circle-img mb-3" />
       <h5>Dr. Saher Javaid</h5>
@@ -324,14 +329,17 @@ title: Home
       <p>Local Chair</p>
     </div>
 
-<div class="col-md-4">
-      <img src="/assets/images/guojun.jpg" alt="abbas" class="circle-img mb-3" />
+    <div class="col-md-4">
+      <img
+        src="/assets/images/guojun.jpg"
+        alt="abbas"
+        class="circle-img mb-3"
+      />
       <h5>Guojun Tang</h5>
       <h6><i>University of Calgary, Canada</i></h6>
       <p>Local Chair</p>
     </div>
 
-    
     <div class="row text-center justify-content-center g-4">
       <div class="row text-center">
         <div class="col-12">
