--- a/travel/ieee-cis-travel-grants/index.html
+++ b/travel/ieee-cis-travel-grants/index.html
@@ -19,7 +19,9 @@ title: IEEE Travel Grant
     <div
       class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
     >
-      <h1 class="display-5 fw-bolder mt-5">IEEE Travel Grants</h1>
+      <h1 class="display-5 fw-bolder mt-5">
+        IEEE Computational Intelligence Society (CIS) Travel Grants
+      </h1>
     </div>
   </div>
 </section>
