SEGA updated TPC

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -178,6 +178,7 @@ title: SEGA Workshop 2025
               <h5 class="fs-6">Marina Milner-Bolotin<br />University of British Columbia, Canada<br /></h5>
               <h5 class="fs-6">Salma Noor<br />Fairleigh Dickinson University, Canada<br /></h5>
               <h5 class="fs-6">Rita Orji<br />Dalhousie University, Canada<br /></h5>
+              <h5 class="fs-6">Yujung Park<br />Sungkyunkwan University, South Korea<br /></h5>
               <h5 class="fs-6">Fred Popowich<br />Simon Fraser University, Canada<br /></h5>
               <h5 class="fs-6">Frank Rudzicz<br />Dalhousie University, Canada<br /></h5>
               <h5 class="fs-6">Claudio Savaglio<br />The University of Calabria, Italy<br /></h5>
@@ -186,6 +187,7 @@ title: SEGA Workshop 2025
               <h5 class="fs-6">Avimanyou Vatsa <br />Fairleigh Dickinson University, USA<br /></h5>
               <h5 class="fs-6">Nicholas Vincent <br />Simon Fraser University, Canada<br /></h5>
               <h5 class="fs-6">Johan Woodworth<br />Mount Saint Vincent University, Canada<br /></h5>
+              <h5 class="fs-6">Shuo Xu<br />Beijing University of Technology, China<br /></h5>
               <h5 class="fs-6">Xiaokun Zhang<br />Athabasca University, Canada<br /></h5>
             </div>
           </div>
