Added new tab target to external links

--- a/cfp/index.html
+++ b/cfp/index.html
@@ -31,9 +31,7 @@ title: IEEE SWC 2025 CFP
         <h3 class="">{{site.data.swc_data.dates.conferenceDates}}</h3>
       </div>
       <div>
-        <a
-          class="btn btn-primary fw-bolder"
-          href="https://edas.info/newPaper.php?c=33582"
+        <a class="btn btn-primary fw-bolder" href="#submission"
           >Submit Paper to SWC 2025</a
         >
       </div>
@@ -180,7 +178,7 @@ title: IEEE SWC 2025 CFP
   {% include colocated-conferences.html %}
 </section>
 
-<section class="container-fluid d-flex flex-column gap-4">
+<section class="container-fluid d-flex flex-column gap-4" id="submission">
   <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
     <h3>Conference Proceedings</h3>
     <p class="fs-5">
@@ -206,12 +204,21 @@ title: IEEE SWC 2025 CFP
       conference, in order for the paper to appear in the conference
       proceedings.
     </p>
-    <div>
+    <div
+      class="d-flex flex-column gap-2 justify-content-start align-items-start"
+    >
       <a
         class="btn btn-primary fw-bolder"
+        target="_blank"
         href="https://edas.info/newPaper.php?c=33582"
         >Submit Paper to SWC 2025</a
       >
+      <p class="fs-5">
+        Submission Link:
+        <a href="https://edas.info/newPaper.php?c=33582" target="_blank"
+          >https://edas.info/newPaper.php?c=33582</a
+        >
+      </p>
     </div>
   </div>
 </section>
