--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -30,9 +30,7 @@ title: IEEE MVS 2025
         <h3 class="">August 18 - 22, 2025</h3>
       </div>
       <div>
-        <a
-          class="btn btn-primary fw-bolder"
-          href="https://edas.info/newPaper.php?c=33583"
+        <a class="btn btn-primary fw-bolder" href="#submission"
           >Submit Paper to MVS 2025</a
         >
       </div>
@@ -114,12 +112,16 @@ title: IEEE MVS 2025
           <div class="d-flex gap-1 flex-column">
             <h5 class="fs-6 fw-bold">Program Chairs</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Azza Basiouni, Liwa College, UAE, email: azza.basiouni@lc.ac.ae</h5>
               <h5 class="fs-6">
-                Junhui Hou, City University of Hong Kong, Hong Kong, China, email: jh.hou@cityu.edu.hk
+                Azza Basiouni, Liwa College, UAE, email: azza.basiouni@lc.ac.ae
               </h5>
               <h5 class="fs-6">
-                Francesco Pupo, The University of Calabria, Italy, email: francesco.pupo@unical.it
+                Junhui Hou, City University of Hong Kong, Hong Kong, China,
+                email: jh.hou@cityu.edu.hk
+              </h5>
+              <h5 class="fs-6">
+                Francesco Pupo, The University of Calabria, Italy, email:
+                francesco.pupo@unical.it
               </h5>
             </div>
           </div>
@@ -325,7 +327,7 @@ title: IEEE MVS 2025
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row" id="submission">
         <div class="col-sm-12 d-flex flex-column gap-3 justify-content-around">
           <h3 class="">Submission & Publication</h3>
           <p class="fs-5">
@@ -381,12 +383,21 @@ title: IEEE MVS 2025
             link below. Make sure you select the right conference, track,
             workshop or forums for your paper.
           </p>
-          <div>
+          <div
+            class="d-flex flex-column gap-2 justify-content-start align-items-start"
+          >
             <a
               class="btn btn-primary fw-bolder"
+              target="_blank"
               href="https://edas.info/newPaper.php?c=33583"
               >Submit Paper to MVS 2025</a
             >
+            <p class="fs-5">
+              Submission Link:
+              <a href="https://edas.info/newPaper.php?c=33583" target="_blank"
+                >https://edas.info/newPaper.php?c=33583</a
+              >
+            </p>
           </div>
         </div>
       </div>
