--- a/travel/ieee-cis-travel-grants/index.html
+++ b/travel/ieee-cis-travel-grants/index.html
@@ -87,6 +87,7 @@ title: IEEE Travel Grant
         page:
         <a
           href="https://cis.ieee.org/activities/membership-activities/travel-grants"
+          target="_blank"
           >https://cis.ieee.org/activities/membership-activities/travel-grants</a
         ><br /><br />
         For any queries regarding the grants, please contact the CIS travel
@@ -104,6 +105,7 @@ title: IEEE Travel Grant
           <b> Become an IEEE member</b> – full details at
           <a
             href="https://www.ieee.org/membership-catalog/productdetail/showProductDetailPage.html?product=MEMIEEE500"
+            target="_blank"
             >https://www.ieee.org/membership-catalog/productdetail/showProductDetailPage.html?product=MEMIEEE500</a
           >
         </li>
@@ -111,6 +113,7 @@ title: IEEE Travel Grant
           <b>Become an IEEE CIS member</b> – full details at
           <a
             href="https://www.ieee.org/membership-catalog/productdetail/showProductDetailPage.html?product=MEMCIS011"
+            target="_blank"
             >https://www.ieee.org/membership-catalog/productdetail/showProductDetailPage.html?product=MEMCIS011</a
           >
         </li>
