--- a/uic/index.html
+++ b/uic/index.html
@@ -28,7 +28,7 @@ title: IEEE UIC 2025
         <h3 class="">August 18 - 22, 2025</h3>
       </div>
       <div>
-        <a class="btn btn-primary fw-bolder" href="https://edas.info/N33589"
+        <a class="btn btn-primary fw-bolder" href="#submission"
           >Submit Paper to UIC 2025</a
         >
       </div>
@@ -89,7 +89,10 @@ title: IEEE UIC 2025
               <h5 class="fs-6">
                 Ying Zhang, Northwestern Polytechnical University, China
               </h5>
-              <h5 class="fs-6">Xiaokang Wang, Hainan University, China, email: xkwang@hainanu.edu.cn </h5>
+              <h5 class="fs-6">
+                Xiaokang Wang, Hainan University, China, email:
+                xkwang@hainanu.edu.cn
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
@@ -270,7 +273,7 @@ title: IEEE UIC 2025
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row" id="submission">
         <div class="col-sm-12 d-flex flex-column gap-3 justify-content-around">
           <h3 class="">Paper Submission</h3>
           <p class="fs-5">
@@ -291,10 +294,16 @@ title: IEEE UIC 2025
             and EI. Distinguished papers presented at the conference, after
             further revision, will be invited for submission to a special issue
           </p>
-          <div>
-            <a class="btn btn-primary fw-bolder" href="https://edas.info/N33589"
+          <div
+            class="d-flex flex-column gap-2 justify-content-start align-items-start"
+          >
+            <a class="btn btn-primary fw-bolder" target="_blank" href="https://edas.info/N33589"
               >Submit Paper to UIC 2025</a
             >
+            <p class="fs-5">
+              Submission Link:
+              <a href="https://edas.info/N33589" target="_blank">https://edas.info/N33589</a>
+            </p>
           </div>
         </div>
       </div>
