--- a/workshops/fusion/index.html
+++ b/workshops/fusion/index.html
@@ -26,6 +26,7 @@ title: FUSION Workshop 2025
       <div>
         <a
           class="btn btn-primary fw-bolder"
+          target="_blank"
           href="https://edas.info/login.php?rurl=aHR0cHM6Ly9lZGFzLmluZm8vTjMzNTg5P2M9MzM1ODk="
           >Submit Paper to Workshop</a
         >
@@ -152,7 +153,9 @@ title: FUSION Workshop 2025
             the contact information of all the authors. The IEEE LaTeX and
             Microsoft Word templates for conferences can be found at IEEE
             Manuscript Templates for Conference Proceedings at
-            <a href="https://www.ieee.org/conferences/publishing/templates.html"
+            <a
+              href="https://www.ieee.org/conferences/publishing/templates.html"
+              target="_blank"
               >https://www.ieee.org/conferences/publishing/templates.html</a
             >. Submitted papers will be peer reviewed by at least three
             reviewers. The materials presented in the papers should not be
@@ -166,6 +169,7 @@ title: FUSION Workshop 2025
             <a
               class="btn btn-primary fw-bolder"
               href="https://edas.info/login.php?rurl=aHR0cHM6Ly9lZGFzLmluZm8vTjMzNTg5P2M9MzM1ODk="
+              target="_blank"
               >Submit Paper to Workshop</a
             >
           </div>
