--- a/workshops/next-gen-networking/index.html
+++ b/workshops/next-gen-networking/index.html
@@ -26,6 +26,7 @@ title: Next Generation Networking Workshop 2025
       <div>
         <a
           class="btn btn-primary fw-bolder"
+          target="_blank"
           href="https://edas.info/newPaper.php?c=33582"
           >Submit Paper to Workshop</a
         >
@@ -181,6 +182,7 @@ title: Next Generation Networking Workshop 2025
             <a
               class="btn btn-primary fw-bolder"
               href="https://edas.info/newPaper.php?c=33582"
+              target="_blank"
               >Submit Paper to Workshop</a
             >
           </div>
