--- a/wsw-forum/index.html
+++ b/wsw-forum/index.html
@@ -70,6 +70,7 @@ title: Women in the Smart World Forum 2025
             Please note that the reporter of the first cycle accepted proposals
             can apply for the IEEE WIE Travel Grant (<a
               href="https://wie.ieee.org/grants-scholarships/travel-grants/"
+              target="_blank"
               >https://wie.ieee.org/grants-scholarships/travel-grants/</a
             >)
           </p>
@@ -221,6 +222,7 @@ title: Women in the Smart World Forum 2025
             <a
               class="btn btn-primary fw-bolder disabled"
               href="https://edas.info/N33584"
+              target="_blank"
               >Submit Proposal to WSW Forum 2025 (Coming soon)</a
             >
           </div>
