--- a/atc/index.html
+++ b/atc/index.html
@@ -28,9 +28,7 @@ title: IEEE UIC 2025
         <h3 class="">August 18 - 22, 2025</h3>
       </div>
       <div>
-        <a
-          class="btn btn-primary fw-bolder"
-          href="https://edas.info/index.php?c=33649"
+        <a class="btn btn-primary fw-bolder" href="#submission"
           >Submit Paper to ATC 2025</a
         >
       </div>
@@ -103,8 +101,8 @@ title: IEEE UIC 2025
             <div class="d-flex flex-column">
               <h5 class="fs-6">Tarik Taleb, Ruhr University Bochum, Germany</h5>
               <h5 class="fs-6">
-                Zuowei Zhang, Northwestern Polytechnical University, China,  email: zhuhao@cqupt.edu.cn
-
+                Zuowei Zhang, Northwestern Polytechnical University, China,
+                email: zhuhao@cqupt.edu.cn
               </h5>
             </div>
           </div>
@@ -289,7 +287,7 @@ title: IEEE UIC 2025
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row" id="submission">
         <div class="col-sm-12 d-flex flex-column gap-3 justify-content-around">
           <h3 class="">Paper Submission</h3>
           <p class="fs-5">
@@ -310,12 +308,22 @@ title: IEEE UIC 2025
             and EI. Distinguished papers presented at the conference, after
             further revision, will be invited for submission to a special issue
           </p>
-          <div>
+          <div
+            class="d-flex flex-column gap-2 justify-content-start align-items-start"
+          >
             <a
               class="btn btn-primary fw-bolder"
+              target="_blank"
               href="https://edas.info/index.php?c=33649"
               >Submit Paper to ATC 2025</a
             >
+            <p class="fs-5">
+              Submission Link:
+              <a href="https://edas.info/index.php?c=33649"
+              target="_blank"
+                >https://edas.info/index.php?c=33649</a
+              >
+            </p>
           </div>
         </div>
       </div>
