--- a/digitaltwin/index.html
+++ b/digitaltwin/index.html
@@ -30,7 +30,7 @@ title: IEEE Digital Twin 2025
         <h3 class="">August 18 - 22, 2025</h3>
       </div>
       <div>
-        <a class="btn btn-primary fw-bolder" href="https://edas.info/N33584"
+        <a class="btn btn-primary fw-bolder" href="#submission"
           >Submit Paper to Digital Twin 2025</a
         >
       </div>
@@ -99,7 +99,10 @@ title: IEEE Digital Twin 2025
           <div class="d-flex gap-1 flex-column">
             <h5 class="fs-6 fw-bold">Program Chairs</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Tao Zhu, University of South China, China , email: tzhu@usc.edu.cn</h5>
+              <h5 class="fs-6">
+                Tao Zhu, University of South China, China , email:
+                tzhu@usc.edu.cn
+              </h5>
               <h5 class="fs-6">Jing Qin, Dalian University, China</h5>
               <h5 class="fs-6">
                 Nyo Thiri Aung, University College Dublin, Ireland
@@ -292,7 +295,7 @@ title: IEEE Digital Twin 2025
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row" id="submission">
         <div class="col-sm-12 d-flex flex-column gap-3 justify-content-around">
           <h3 class="">Digital Twin 2025 Paper Publication</h3>
           <p class="fs-5">
@@ -307,10 +310,19 @@ title: IEEE Digital Twin 2025
             presented to high quality papers. Selected papers will be
             recommended to a number of special issues of prestigious journal.
           </p>
-          <div>
-            <a class="btn btn-primary fw-bolder" href="https://edas.info/N33584"
+          <div
+            class="d-flex flex-column gap-2 justify-content-start align-items-start"
+          >
+            <a
+              class="btn btn-primary fw-bolder"
+              target="_blank"
+              href="https://edas.info/N33584"
               >Submit Paper to Digital Twin 2025</a
             >
+            <p class="fs-5">
+              Submission Link:
+              <a href="https://edas.info/N33584" target="_blank">https://edas.info/N33584</a>
+            </p>
           </div>
         </div>
       </div>
