--- a/scalcom/index.html
+++ b/scalcom/index.html
@@ -31,7 +31,7 @@ title: IEEE ScalCom 2025
         <h3 class="">August 18 - 22, 2025</h3>
       </div>
       <div>
-        <a class="btn btn-primary fw-bolder" href="https://edas.info/N33585"
+        <a class="btn btn-primary fw-bolder" href="#submission"
           >Submit Paper to ScalCom 2025</a
         >
       </div>
@@ -86,12 +86,12 @@ title: IEEE ScalCom 2025
             <h5 class="fs-6 fw-bold">Program Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Cen Chen, South China University of Technology, China, email: 
+                Cen Chen, South China University of Technology, China, email:
                 chencen@scut.edu.cn
               </h5>
               <h5 class="fs-6">
-                Fan Jiang, University of Northern BC, Canada, email: Fan.Jiang@unbc.ca
-
+                Fan Jiang, University of Northern BC, Canada, email:
+                Fan.Jiang@unbc.ca
               </h5>
             </div>
           </div>
@@ -289,7 +289,7 @@ title: IEEE ScalCom 2025
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row" id="submission">
         <div class="col-sm-12 d-flex flex-column gap-3 justify-content-around">
           <h3 class="">Paper Submission</h3>
           <p class="fs-5">
@@ -313,13 +313,20 @@ title: IEEE ScalCom 2025
             will be nominated to publish at high-level journal, after further
             extensions and revisions.
           </p>
-          <div>
+          <div
+            class="d-flex flex-column gap-2 justify-content-start align-items-start"
+          >
             <a
               class="btn btn-primary fw-bolder"
+              target="_blank"
               href="https://edas.info/N33585"
             >
               Submit Paper to ScalCom 2025
             </a>
+            <p class="fs-5">
+              Submission Link:
+              <a href="https://edas.info/N33585" target="_blank">https://edas.info/N33585</a>
+            </p>
           </div>
         </div>
       </div>
