--- a/venue/telus-convention-center/index.html
+++ b/venue/telus-convention-center/index.html
@@ -49,7 +49,7 @@ title: Venue - Telus Convention Center
     </div>
     <div class="row">
       <div class="col-12 mb-3 mb-sm-0 d-flex flex-row gap-4">
-        <a href="https://calgary-convention.com/" class="btn btn-primary w-auto"
+        <a href="https://calgary-convention.com/" target="_blank" class="btn btn-primary w-auto"
           >Learn More</a
         >
       </div>
