--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -23,7 +23,7 @@ title: SEGA Workshop 2025
         The 1st International Workshop on Smart Education in the Age of
         Generative AI (SEGA) 2025
       </h1>
-      <a href="./CFP_SEGA_2025.pdf" class="btn btn-primary w-50"
+      <a href="./CFP_SEGA_2025.pdf" target="_blank" class="btn btn-primary w-50"
         >Call For Papers</a
       >
     </div>
@@ -84,7 +84,9 @@ title: SEGA Workshop 2025
               <h5 class="fs-6">
                 Francesco Pupo<br />
                 The University of Calabria, Italy<br />
-                <a href="mailto:francesco.pupo@unical.it">francesco.pupo@unical.it</a>
+                <a href="mailto:francesco.pupo@unical.it"
+                  >francesco.pupo@unical.it</a
+                >
               </h5>
             </div>
           </div>
@@ -106,12 +108,16 @@ title: SEGA Workshop 2025
               <h5 class="fs-6">
                 Gagan Jhajj<br />
                 Athabasca University, Canada<br />
-                <a href="mailto:gjhajj1@learn.athabascau.ca">gjhajj1@learn.athabascau.ca</a>
+                <a href="mailto:gjhajj1@learn.athabascau.ca"
+                  >gjhajj1@learn.athabascau.ca</a
+                >
               </h5>
               <h5 class="fs-6">
                 Hongxin Yan<br />
                 Athabasca University, Canada<br />
-                <a href="mailto:hongxiny@athabascau.ca">hongxiny@athabascau.ca</a>
+                <a href="mailto:hongxiny@athabascau.ca"
+                  >hongxiny@athabascau.ca</a
+                >
               </h5>
             </div>
           </div>
@@ -154,39 +160,106 @@ title: SEGA Workshop 2025
           </div>
           <hr class="w-100" />
           <div class="d-flex gap-1 flex-column w-100">
-            <h5 class="fs-6 fw-bold">Technical Program Committee (in alphabetical order of last names)</h5>
+            <h5 class="fs-6 fw-bold">
+              Technical Program Committee (in alphabetical order of last names)
+            </h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Jamal Alsakran<br />Fairleigh Dickinson University, Canada<br /></h5>
-              <h5 class="fs-6">Jason Bernard<br />Athabasca University, Canada<br /></h5>
-              <h5 class="fs-6">Thomas Chiu<br />The Chinese University of Hong Kong, Hong Kong<br /></h5>
-              <h5 class="fs-6">Douglas Clark<br />University of Calgary, Canada<br /></h5>
-              <h5 class="fs-6">Wenyun Dai <br />Fairleigh Dickinson University, USA<br /></h5>
-              <h5 class="fs-6">Ali Dewan<br />Athabasca University, Canada<br /></h5>
-              <h5 class="fs-6">Sarah Eaton<br />University of Calgary, Canada<br /></h5>
-              <h5 class="fs-6">Glen Farrelly<br />Athabasca University, Canada<br /></h5>
-              <h5 class="fs-6">Maurizio Gabbrielli<br />University of Bologna, Italy<br /></h5>
-              <h5 class="fs-6">Sabine Graf<br />Athabasca University, Canada<br /></h5>
-              <h5 class="fs-6">Stella George<br />Athabasca University, Canada<br /></h5>
-              <h5 class="fs-6">Dongkun Han<br />The Chinese University of Hong Kong, Hong Kong<br /></h5>
-              <h5 class="fs-6">Bob Heller<br />Athabasca University, Canada<br /></h5>
-              <h5 class="fs-6">Leon Lei<br />City University of Hong Kong, Hong Kong<br /></h5>
-              <h5 class="fs-6">Xing Liu<br />Kwantlen Polytechnic University, Canada<br /></h5>
-              <h5 class="fs-6">Lukas Liu<br />The University of Hong Kong, Hong Kong<br /></h5>
-              <h5 class="fs-6">Yaoqing Liu <br />Fairleigh Dickinson University, USA<br /></h5>
-              <h5 class="fs-6">Zhiwei Mao <br />Fairleigh Dickinson University, USA<br /></h5>
-              <h5 class="fs-6">Zahia Marzouk<br />Kwantlen Polytechnic University, Canada<br /></h5>
-              <h5 class="fs-6">Marina Milner-Bolotin<br />University of British Columbia, Canada<br /></h5>
-              <h5 class="fs-6">Salma Noor<br />Fairleigh Dickinson University, Canada<br /></h5>
-              <h5 class="fs-6">Rita Orji<br />Dalhousie University, Canada<br /></h5>
-              <h5 class="fs-6">Fred Popowich<br />Simon Fraser University, Canada<br /></h5>
-              <h5 class="fs-6">Frank Rudzicz<br />Dalhousie University, Canada<br /></h5>
-              <h5 class="fs-6">Claudio Savaglio<br />The University of Calabria, Italy<br /></h5>
-              <h5 class="fs-6">Angela Siegel<br />Dalhousie University, Canada<br /></h5>
-              <h5 class="fs-6">Qing Tan<br />Athabasca University, Canada<br /></h5>
-              <h5 class="fs-6">Avimanyou Vatsa <br />Fairleigh Dickinson University, USA<br /></h5>
-              <h5 class="fs-6">Nicholas Vincent <br />Simon Fraser University, Canada<br /></h5>
-              <h5 class="fs-6">Johan Woodworth<br />Mount Saint Vincent University, Canada<br /></h5>
-              <h5 class="fs-6">Xiaokun Zhang<br />Athabasca University, Canada<br /></h5>
+              <h5 class="fs-6">
+                Jamal Alsakran<br />Fairleigh Dickinson University, Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Jason Bernard<br />Athabasca University, Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Thomas Chiu<br />The Chinese University of Hong Kong, Hong
+                Kong<br />
+              </h5>
+              <h5 class="fs-6">
+                Douglas Clark<br />University of Calgary, Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Wenyun Dai <br />Fairleigh Dickinson University, USA<br />
+              </h5>
+              <h5 class="fs-6">
+                Ali Dewan<br />Athabasca University, Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Sarah Eaton<br />University of Calgary, Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Glen Farrelly<br />Athabasca University, Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Maurizio Gabbrielli<br />University of Bologna, Italy<br />
+              </h5>
+              <h5 class="fs-6">
+                Sabine Graf<br />Athabasca University, Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Stella George<br />Athabasca University, Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Dongkun Han<br />The Chinese University of Hong Kong, Hong
+                Kong<br />
+              </h5>
+              <h5 class="fs-6">
+                Bob Heller<br />Athabasca University, Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Leon Lei<br />City University of Hong Kong, Hong Kong<br />
+              </h5>
+              <h5 class="fs-6">
+                Xing Liu<br />Kwantlen Polytechnic University, Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Lukas Liu<br />The University of Hong Kong, Hong Kong<br />
+              </h5>
+              <h5 class="fs-6">
+                Yaoqing Liu <br />Fairleigh Dickinson University, USA<br />
+              </h5>
+              <h5 class="fs-6">
+                Zhiwei Mao <br />Fairleigh Dickinson University, USA<br />
+              </h5>
+              <h5 class="fs-6">
+                Zahia Marzouk<br />Kwantlen Polytechnic University, Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Marina Milner-Bolotin<br />University of British Columbia,
+                Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Salma Noor<br />Fairleigh Dickinson University, Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Rita Orji<br />Dalhousie University, Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Fred Popowich<br />Simon Fraser University, Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Frank Rudzicz<br />Dalhousie University, Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Claudio Savaglio<br />The University of Calabria, Italy<br />
+              </h5>
+              <h5 class="fs-6">
+                Angela Siegel<br />Dalhousie University, Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Qing Tan<br />Athabasca University, Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Avimanyou Vatsa <br />Fairleigh Dickinson University, USA<br />
+              </h5>
+              <h5 class="fs-6">
+                Nicholas Vincent <br />Simon Fraser University, Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Johan Woodworth<br />Mount Saint Vincent University, Canada<br />
+              </h5>
+              <h5 class="fs-6">
+                Xiaokun Zhang<br />Athabasca University, Canada<br />
+              </h5>
             </div>
           </div>
         </div>
@@ -229,27 +302,26 @@ title: SEGA Workshop 2025
               </ul>
               <h5 class="fs-5">The workshop invites contributions on:</h5>
               <ul>
-                <li>
-                  Novel AI/RL/ML algorithms for education
-                </li>
+                <li>Novel AI/RL/ML algorithms for education</li>
                 <li>
                   Empirical studies on AI's impact on learning effectiveness
                 </li>
                 <li>
-                  Theoretical and conceptual frameworks that inform the design, integration, or critique of AI in 
-                  education
+                  Theoretical and conceptual frameworks that inform the design,
+                  integration, or critique of AI in education
                 </li>
-                <li>
-                  Evaluation frameworks for AI-generated content
-                </li>
+                <li>Evaluation frameworks for AI-generated content</li>
                 <li>
                   Institutional ethical guidelines and policy recommendations
                 </li>
               </ul>
-              <h5 class="fs-5">This workshop aims to catalyze actionable insights for creating AI systems that 
-                augment human expertise while prioritizing pedagogical integrity. We welcome both empirical 
-                research and theoretical explorations that advance critical, ethical, and pedagogically 
-                grounded understandings of AI in educational contexts.
+              <h5 class="fs-5">
+                This workshop aims to catalyze actionable insights for creating
+                AI systems that augment human expertise while prioritizing
+                pedagogical integrity. We welcome both empirical research and
+                theoretical explorations that advance critical, ethical, and
+                pedagogically grounded understandings of AI in educational
+                contexts.
               </h5>
             </div>
           </div>
@@ -285,6 +357,7 @@ title: SEGA Workshop 2025
             proceedings instructions:
             <a
               href="https://www.ieee.org/conferences/publishing/templates.html"
+              target="_blank"
             >
               Template</a
             >
@@ -299,6 +372,7 @@ title: SEGA Workshop 2025
           </p>
           <a
             href="https://edas.info/newPaper.php?c=33582&track=131098"
+            target="_blank"
             class="btn btn-primary w-50"
             >Submit Your Work</a
           >
