Fixed links on venu page

--- a/venue/index.html
+++ b/venue/index.html
@@ -53,10 +53,14 @@ title: Venue - Calgary
       <div class="col-12 mb-3 mb-sm-0 d-flex flex-row gap-2">
         <a
           href="https://www.calgary.ca/home.html"
+          target="_blank"
           class="btn btn-primary w-auto"
           >City of Calgary</a
         >
-        <a href="https://www.visitcalgary.com/" class="btn btn-primary w-auto"
+        <a
+          href="https://www.visitcalgary.com/"
+          target="_blank"
+          class="btn btn-primary w-auto"
           >Tourism Calgary</a
         >
       </div>
@@ -91,6 +95,7 @@ title: Venue - Calgary
       <div class="col-12 mb-3 mb-sm-0 d-flex flex-row gap-2">
         <a
           href="https://www.calgarytransit.com/home.html"
+          target="_blank"
           class="btn btn-primary w-auto"
           >Calgary Transit</a
         >
@@ -123,7 +128,10 @@ title: Venue - Calgary
   </div>
   <div class="row">
     <div class="col-12 mb-3 mb-sm-0 d-flex flex-row gap-2">
-      <a href="https://www.yyc.com/en-us/" class="btn btn-primary w-auto"
+      <a
+        href="https://www.yyc.com/en-us/"
+        target="_blank"
+        class="btn btn-primary w-auto"
         >Calgary International Airport</a
       >
     </div>
@@ -159,10 +167,14 @@ title: Venue - Calgary
       <div class="col-12 mb-3 mb-sm-0 d-flex flex-row gap-2">
         <a
           href="https://www.banfflakelouise.com/"
+          target="_blank"
           class="btn btn-primary w-auto"
           >Learn more Banff & Lake Louise</a
         >
-        <a href="https://www.jasper.travel/" class="btn btn-primary w-auto"
+        <a
+          href="https://www.jasper.travel/"
+          target="_blank"
+          class="btn btn-primary w-auto"
           >Learn more Jasper</a
         >
       </div>
