Work on submission links

--- a/uic/index.html
+++ b/uic/index.html
@@ -297,12 +297,17 @@ title: IEEE UIC 2025
           <div
             class="d-flex flex-column gap-2 justify-content-start align-items-start"
           >
-            <a class="btn btn-primary fw-bolder" target="_blank" href="https://edas.info/N33589"
+            <a
+              class="btn btn-primary fw-bolder"
+              target="_blank"
+              href="https://edas.info/N33589"
               >Submit Paper to UIC 2025</a
             >
-            <p class="fs-5">
+            <p class="fs-6">
               Submission Link:
-              <a href="https://edas.info/N33589" target="_blank">https://edas.info/N33589</a>
+              <a href="https://edas.info/N33589" target="_blank"
+                >https://edas.info/N33589</a
+              >
             </p>
           </div>
         </div>
