--- a/workshops/fusion/index.html
+++ b/workshops/fusion/index.html
@@ -24,10 +24,7 @@ title: FUSION Workshop 2025
         Technologies & Applications (FUSION) 2025
       </h1>
       <div>
-        <a
-          class="btn btn-primary fw-bolder"
-          target="_blank"
-          href="https://edas.info/login.php?rurl=aHR0cHM6Ly9lZGFzLmluZm8vTjMzNTg5P2M9MzM1ODk="
+        <a class="btn btn-primary fw-bolder" href="#submission-guidelines"
           >Submit Paper to Workshop</a
         >
       </div>
@@ -165,13 +162,23 @@ title: FUSION Workshop 2025
             papers will be included in the conference proceedings to be
             published by IEEE-CS CPS (indexed by EI).
           </p>
-          <div>
+          <div
+            class="d-flex flex-column gap-2 justify-content-start align-items-start"
+          >
             <a
               class="btn btn-primary fw-bolder"
-              href="https://edas.info/login.php?rurl=aHR0cHM6Ly9lZGFzLmluZm8vTjMzNTg5P2M9MzM1ODk="
+              href="https://edas.info/newPaper.php?c=33582&track=131131"
               target="_blank"
               >Submit Paper to Workshop</a
             >
+            <p class="fs-6">
+              Submission Link:
+              <a
+                href="https://edas.info/newPaper.php?c=33582&track=131131"
+                target="_blank"
+                >https://edas.info/newPaper.php?c=33582&track=131131</a
+              >
+            </p>
           </div>
         </div>
       </div>
