--- a/workshops/next-gen-networking/index.html
+++ b/workshops/next-gen-networking/index.html
@@ -24,10 +24,7 @@ title: Next Generation Networking Workshop 2025
         Technologies, and Applications
       </h1>
       <div>
-        <a
-          class="btn btn-primary fw-bolder"
-          target="_blank"
-          href="https://edas.info/newPaper.php?c=33582"
+        <a class="btn btn-primary fw-bolder" href="#submission-guidelines"
           >Submit Paper to Workshop</a
         >
       </div>
@@ -178,13 +175,23 @@ title: Next Generation Networking Workshop 2025
             each accepted paper must register early to attend the conference, in
             order for the paper to appear in the conference proceedings.
           </p>
-          <div>
+          <div
+            class="d-flex flex-column gap-2 justify-content-start align-items-start"
+          >
             <a
               class="btn btn-primary fw-bolder"
-              href="https://edas.info/newPaper.php?c=33582"
+              href="https://edas.info/newPaper.php?c=33582&track=131132"
               target="_blank"
               >Submit Paper to Workshop</a
             >
+            <p class="fs-6">
+              Submission Link:
+              <a
+                href="https://edas.info/newPaper.php?c=33582&track=131132"
+                target="_blank"
+                >https://edas.info/newPaper.php?c=33582&track=131132</a
+              >
+            </p>
           </div>
         </div>
       </div>
